<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WeatherApp</string>
    <string name="nav_header_subtitle">Demo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_search">Search</string>
    <string name="nav_weather">Weather</string>
    <string name="enter_zip">Enter Zip</string>
    <string name="weather_caps">WEATHER</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="measured">Measured:&#160;</string>
    <string name="degree_symbol">°F</string>
    <string name="error_zip">Please Enter a 5 Digit Zip</string>
    <string name="error_server">Sorry, there was an error with your service request :(</string>
</resources>
