<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

        <variable
            name="weatherViewModel"
            type="com.example.mcs.weatherapp.ViewModel.WeatherViewModel"/>
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".UI.WeatherFragment"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/weather_caps"
            android:textStyle="bold"
            android:textColor="@color/description"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{weatherViewModel.weatherModel.overview}"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/title"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weather"
                android:text="@{weatherViewModel.weatherModel.description}"
                android:textSize="17sp"
                android:textColor="@color/description"
                android:layout_marginEnd="90sp"/>

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/degree"
                android:text="@{weatherViewModel.weatherModel.temp}"
                android:textColor="@color/title"
                android:textSize="40sp"
                android:layout_marginTop="-8dp"
                />
            <TextView
                android:id="@+id/degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/degree_symbol"
                android:textColor="@color/title"
                android:textSize="25sp"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/description"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textStyle="bold"
                android:textSize="@dimen/weather_text_size"
                android:textColor="@color/title"/>
            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/weather_text_size"
                android:text="@{weatherViewModel.weatherModel.windSpeed}"
                android:textColor="@color/description"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/description"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textStyle="bold"
                android:textSize="@dimen/weather_text_size"
                android:textColor="@color/title"/>
            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/weather_text_size"
                android:text="@{weatherViewModel.weatherModel.pressure}"
                android:textColor="@color/description"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/description"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textStyle="bold"
                android:textSize="@dimen/weather_text_size"
                android:textColor="@color/title"/>
            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/weather_text_size"
                android:text="@{weatherViewModel.weatherModel.humidity}"
                android:textColor="@color/description"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/description"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise"
                android:textStyle="bold"
                android:textSize="@dimen/weather_text_size"
                android:textColor="@color/title"/>
            <TextView
                android:id="@+id/sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/weather_text_size"
                android:text="@{weatherViewModel.weatherModel.sunrise}"
                android:textColor="@color/description"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/measured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measured"
                android:textSize="@dimen/weather_text_size"
                android:textColor="@color/description"/>
            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/measured"
                android:textSize="@dimen/weather_text_size"
                android:text="@{weatherViewModel.weatherModel.city}"
                android:textColor="@color/description"/>

        </RelativeLayout>

    </LinearLayout>
</layout>
